@@ -62,6 +62,14 @@
 | Add --service-account flag
 | https://github.com/knative/client/pull/401[#401]
 
+| 🧽
+| Docs restructure
+| https://github.com/knative/client/pull/421[#421]
+
+| 🎁
+| Add --annotation flag
+| https://github.com/knative/client/pull/422[#422]
+
 |===
 
 ## v0.2.0 (2019-07-10)
